# react-native-jsi-image

./: CONTRIBUTING.md  README.md  package.json  react-native-jsi-image.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativejsiimage/: JsiImageModule.java  JsiImagePackage.java
cpp/: react-native-jsi-image.cpp
cpp/JSI Utils/: JsiPromise.cpp  JsiPromise.h  TypedArray.cpp  TypedArray.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativejsiimage/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativejsiimage/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/JsiImageExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/JsiImageExample.xcodeproj/: project.pbxproj
example/ios/JsiImageExample.xcodeproj/xcshareddata/xcschemes/: JsiImageExample.xcscheme
example/ios/JsiImageExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: ImageHostObject.h  ImageHostObject.mm  JsiImage.h  JsiImage.mm
ios/JsiImage.xcodeproj/: project.pbxproj
src/: Image.ts  index.ts  index.tsx
